<resources>
    <string name="app_name">FOCUS</string>
    <string name="register">REGISTER</string>
    <string name="enter_email">Your email or username</string>
    <string name="enter_pass">Your password</string>
    <string name="log_me_in">LOG ME IN</string>
    <string name="your_username">Your Username</string>
    <string name="your_email">Your Email</string>
    <string name="your_pass">Your Password</string>
    <string name="your_retype">Re-type Your Password</string>
    <string name="select_gender">Select gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_say">Prefer not to say</string>
    <string name="others">Others</string>
    <string name="title_activity_home__page">Home_Page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home__music">Home_Music</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home_music">HomeMusic</string>
    <string name="title_activity_main2">MainActivity2</string>


</resources>