<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    tools:context=".Register_Focus">

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_log_reg"
        android:onClick="Register"
        android:text="@string/register"
        android:typeface="serif"
        app:backgroundTint="@color/brownsoft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_gender" />

    <EditText
        android:id="@+id/etPasswordReg"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/your_pass"
        android:inputType="textPassword"
        android:textColor="@color/browndark"
        android:textColorHint="@color/brownsoft2"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMailReg" />

    <EditText
        android:id="@+id/etUserNameReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/your_username"
        android:inputType="textPersonName"
        android:text=""
        android:importantForAutofill="no"
        android:textColor="@color/browndark"
        android:textColorHint="@color/brownsoft2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_reg" />

    <EditText
        android:id="@+id/etMailReg"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/your_email"
        android:inputType="textPersonName"
        android:text=""
        android:importantForAutofill="no"
        android:textColor="@color/browndark"
        android:textColorHint="@color/brownsoft2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserNameReg" />

    <EditText
        android:id="@+id/etRepassReg"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/your_retype"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:textColorHint="@color/brownsoft2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordReg" />

    <TextView
        android:id="@+id/txt_reg"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_marginTop="48dp"
        android:text="Register"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGenderReg"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/select_gender"
        android:text=""
        android:textColorHint="@color/brownsoft2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRepassReg" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderReg">

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/browndark" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/browndark" />

        <RadioButton
            android:id="@+id/rbOthers"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textColor="@color/browndark" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvMessageRegister"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/etUserNameReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>